log-output/manifests/current-log-service.yml
apiVersion: v1
kind: Service
metadata:
  name: current-log-svc
spec:
  type: ClusterIP
  selector:
    app: current-log
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
