log-output/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
