log-output/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8080
          - pathType: Prefix
            path: /pingpong
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 8080
          - pathType: Prefix
            path: /current
            backend:
              service:
                name: current-log-svc
                port:
                  number: 8081
